deploy/kubernetes/overlays/local-gateway/gateway-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-local-gateway-ingress
  labels:
    app.kubernetes.io/name: wdl
    app.kubernetes.io/component: public-gateway
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: wdl
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-assets-proxy-local-gateway
  labels:
    app.kubernetes.io/name: wdl
    app.kubernetes.io/component: assets-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: wdl
      app.kubernetes.io/component: assets-proxy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              gateway.networking.k8s.io/gateway-name: wdl
      ports:
        - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-s3mock-assets-proxy
  labels:
    app.kubernetes.io/name: wdl
    app.kubernetes.io/component: s3mock
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: wdl
      app.kubernetes.io/component: s3mock
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: wdl
              app.kubernetes.io/component: assets-proxy
      ports:
        - port: 9090
